Bug 725152 - Only use force_stereo_mode pref if it's explicitly set.  r=kinetik