content/media/webm/nsWebMReader.cpp
@@ -136,13 +136,17 @@ nsWebMReader::nsWebMReader(nsBuiltinDecoder* aDecoder)
   mAudioTrack(0),
   mAudioStartUsec(-1),
   mAudioFrames(0),
+  mForceStereoMode(0),
   mHasVideo(false),
   mHasAudio(false),
-  mForceStereoMode(0)
+  mStereoModeForced(false)
 {
   MOZ_COUNT_CTOR(nsWebMReader);
 
-  Preferences::GetInt("media.webm.force_stereo_mode", &mForceStereoMode);
+  mStereoModeForced =
+    NS_SUCCEEDED(Preferences::GetInt(
+          "media.webm.force_stereo_mode",
+          &mForceStereoMode));
 }
 
 nsWebMReader::~nsWebMReader()
@@ -309,21 +313,24 @@ nsresult nsWebMReader::ReadMetadata(nsVideoInfo* aInfo)
         break;
       }
 
-      switch (mForceStereoMode) {
-      case 1:
-        mInfo.mStereoMode = STEREO_MODE_LEFT_RIGHT;
-        break;
-      case 2:
-        mInfo.mStereoMode = STEREO_MODE_RIGHT_LEFT;
-        break;
-      case 3:
-        mInfo.mStereoMode = STEREO_MODE_TOP_BOTTOM;
-        break;
-      case 4:
-        mInfo.mStereoMode = STEREO_MODE_BOTTOM_TOP;
-        break;
-      default:
-        mInfo.mStereoMode = STEREO_MODE_MONO;
+      // Switch only when stereo mode is explicitly set.
+      if (mStereoModeForced) {
+        switch (mForceStereoMode) {
+        case 1:
+          mInfo.mStereoMode = STEREO_MODE_LEFT_RIGHT;
+          break;
+        case 2:
+          mInfo.mStereoMode = STEREO_MODE_RIGHT_LEFT;
+          break;
+        case 3:
+          mInfo.mStereoMode = STEREO_MODE_TOP_BOTTOM;
+          break;
+        case 4:
+          mInfo.mStereoMode = STEREO_MODE_BOTTOM_TOP;
+          break;
+        default:
+          mInfo.mStereoMode = STEREO_MODE_MONO;
+        }
       }
     }
     else if (!mHasAudio && type == NESTEGG_TRACK_AUDIO) {
